--- a/Project work/skeleton_site_pg3.html
+++ b/Project work/skeleton_site_pg3.html
@@ -25,26 +25,26 @@
     </div>
     <div class="mainflex">
         <div class="row1">
-            <div> <img src="../images/Project Pics/IMG_1131.jpeg" alt=""></div>
-            <div><img src="../images/Project Pics/STNMTZ_20160714_02261.jpeg" alt=""></div>
+            <div> <img src="../images/projectPics/IMG_1131.jpeg"></div>
+            <div><img src="../images/projectPics/STNMTZ_20160714_02261.jpeg"></div>
         </div>
         <div class="row2">
-            <div><img src="../images/Project Pics/376+Ridgewood.jpeg" alt=""></div>
-            <div><img src="../images/Project Pics/STNMTZ_20160714_02629.jpeg" alt=""></div>
-            <div><img src="../images/Project Pics/DJI_0087-2.jpeg" alt=""></div>
+            <div><img src="../images/projectPics/376+Ridgewood.jpeg"></div>
+            <div><img src="../images/PprojectPics/STNMTZ_20160714_02629.jpeg"></div>
+            <div><img src="../images/projectPics/DJI_0087-2.jpeg"></div>
         </div>
         <div class="row3">
-            <div><img src="../images/Project Pics/STNMTZ_20170430_114.jpeg" alt=""></div>
-            <div><img src="../images/Project Pics/Screen+Shot+2022-03-10+at+11.53.57+AM.png" alt=""></div>
+            <div><img src="../images/projectPics/STNMTZ_20170430_114.jpeg"></div>
+            <div><img src="../images/projectPics/Screen+Shot+2022-03-10+at+11.53.57+AM.png"></div>
         </div>
         <div class="row4">
-            <img src="../images/Project Pics/DJI_0130.jpeg" alt="">
+            <img src="../images/projectPics/DJI_0130.jpeg">
         </div>
     </div>
     <div class="footer">
         <div class="footertop">
             <div class="logo">
-                <img src="../images/Project Pics/SBlogo.png" class="sblogo" alt="logo">
+                <img src="../images/projectPics/SBlogo.png" class="sblogo">
             </div>
             <div class="info">
                 <div class="infol1">Steinmetz Brothers Drone Photography</div>
