--- a/Project work/skeleton_site_pg2.html
+++ b/Project work/skeleton_site_pg2.html
@@ -24,7 +24,7 @@
     </div>
     <div class="nickBox">
         <div>
-            <img src="../images/projectPics/DSC_0768.png" alt="Nick's Portrait">
+            <img src="../images/projectPics/DSC_0768.png">
         </div>
         <div>
             <h3>Nick</h3>
@@ -33,7 +33,7 @@
     </div>
     <div class="johnBox">
         <div>
-            <img src="../images/projectPics/Screenshot 2022-03-28 at 6.49.54 PM copy.png" alt="John's Portrait">
+            <img src="../images/projectPics/Screenshot 2022-03-28 at 6.49.54 PM copy.png">
         </div>
         <div>
             <h3>John</h3>
@@ -54,7 +54,7 @@
     <div class="footer">
         <div class="footertop">
             <div class="logo">
-                <img src="../images/Project Pics/SBlogo.png" class="sblogo" alt="logo">
+                <img src="../images/projectPics/SBlogo.png" class="sblogo">
             </div>
             <div class="info">
                 <div class="infol1">Steinmetz Brothers Drone Photography</div>
