--- a/projectWork/skeleton_site_pg3.html
+++ b/projectWork/skeleton_site_pg3.html
@@ -25,26 +25,26 @@
     </div>
     <div class="mainflex">
         <div class="row1">
-            <div> <img src="../images/projectPics/IMG_1131.jpeg"></div>
-            <div><img src="../images/projectPics/STNMTZ_20160714_02261.jpeg"></div>
+            <div> <img src="../images/projectPics/IMG_1131.jpeg" alt="Photo of a house"></div>
+            <div><img src="../images/projectPics/STNMTZ_20160714_02261.jpeg" alt="Photo of a house"></div>
         </div>
         <div class="row2">
-            <div><img src="../images/projectPics/376+Ridgewood.jpeg"></div>
-            <div><img src="../images/PprojectPics/STNMTZ_20160714_02629.jpeg"></div>
-            <div><img src="../images/projectPics/DJI_0087-2.jpeg"></div>
+            <div><img src="../images/projectPics/376+Ridgewood.jpeg" alt="Photo of a house"></div>
+            <div><img src="../images/PprojectPics/STNMTZ_20160714_02629.jpeg" alt="Photo of a house"></div>
+            <div><img src="../images/projectPics/DJI_0087-2.jpeg" alt="Photo of a house"></div>
         </div>
         <div class="row3">
-            <div><img src="../images/projectPics/STNMTZ_20170430_114.jpeg"></div>
-            <div><img src="../images/projectPics/Screen+Shot+2022-03-10+at+11.53.57+AM.png"></div>
+            <div><img src="../images/projectPics/STNMTZ_20170430_114.jpeg" alt="Photo of a house"></div>
+            <div><img src="../images/projectPics/Screen+Shot+2022-03-10+at+11.53.57+AM.png" alt="Photo of a house"></div>
         </div>
         <div class="row4">
-            <img src="../images/projectPics/DJI_0130.jpeg">
+            <img src="../images/projectPics/DJI_0130.jpeg alt="Photo of a house"">
         </div>
     </div>
     <div class="footer">
         <div class="footertop">
             <div class="logo">
-                <img src="../images/projectPics/SBlogo.png" class="sblogo">
+                <img src="../images/projectPics/SBlogo.png alt="Photo of a house"" class="sblogo">
             </div>
             <div class="info">
                 <div class="infol1">Steinmetz Brothers Drone Photography</div>
