--- a/projectWork/skeleton_site_pg1.html
+++ b/projectWork/skeleton_site_pg1.html
@@ -28,15 +28,15 @@
     <div class="images1">
         <div class="leftflex">
             <div>
-                <img src="../images/Project Pics/STNMTZ_20170507_2661_.jpeg" alt="zazfor">
+                <img src="../images/projectPics/STNMTZ_20170507_2661_.jpeg" alt="Photo of a house">
             </div>
         </div>
         <div class="rightflex">
             <div class="righttop">
-                <img src="../images/Project Pics/142+Ridgewood2.jpeg" alt="142rw">
+                <img src="../images/projectPics/142+Ridgewood2.jpeg" alt="Photo of a house">
             </div>
             <div class="rightbot">
-                <img src="../images/Project Pics/DJI_0020-4.jpeg" alt="pic3">
+                <img src="../images/projectPics/DJI_0020-4.jpeg" alt="Photo of a house">
             </div>
         </div>
     </div>
