--- a/projectWork/skeleton_site_pg1.html
+++ b/projectWork/skeleton_site_pg1.html
@@ -28,15 +28,15 @@
     <div class="images1">
         <div class="leftflex">
             <div>
-                <img src="../images/projectPics/STNMTZ_20170507_2661_.jpeg" alt="Photo of a house">
+                <img src="../images/projectPics/STNMTZ_20170507_2661_.jpeg" alt="house_photo">
             </div>
         </div>
         <div class="rightflex">
             <div class="righttop">
-                <img src="../images/projectPics/142+Ridgewood2.jpeg" alt="Photo of a house">
+                <img src="../images/projectPics/142+Ridgewood2.jpeg" alt="house_photo">
             </div>
             <div class="rightbot">
-                <img src="../images/projectPics/DJI_0020-4.jpeg" alt="Photo of a house">
+                <img src="../images/projectPics/DJI_0020-4.jpeg" alt="house_photo">
             </div>
         </div>
     </div>
@@ -51,21 +51,21 @@
     <div class="images2">
         <div class="leftflex2">
             <div>
-                <img src="../images/projectPics/STNMTZ_20170430_024.jpeg" alt="Photo of a house">
+                <img src="../images/projectPics/STNMTZ_20170430_024.jpeg" alt="house_photo">
             </div>
         </div>
         <div class="rightflex2">
             <div class="righttop2">
-                <img src="../images/projectPics/DJI_0065.jpeg" alt="Photo of a house">
+                <img src="../images/projectPics/DJI_0065.jpeg" alt="house_photo">
             </div>
             <div class="rightbot2">
-                <img src="../images/projectPics/339+Ridgewood.jpeg" alt="Photo of a house">
+                <img src="../images/projectPics/339+Ridgewood.jpeg" alt="house_photo">
             </div>
         </div>
     </div>
     <div class="footertop">
         <div class="logo">
-            <img src="../images/projectPics/SBlogo.png" class="sblogo" alt="logo">
+            <img src="../images/projectPics/SBlogo.png" class="sblogo" alt="house_photo">
         </div>
         <div class="info">
             <div class="infol1">Steinmetz Brothers Drone Photography</div>
