--- a/projectWork/skeleton_site_pg1.html
+++ b/projectWork/skeleton_site_pg1.html
@@ -4,82 +4,100 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Steinmetz Bros Home</title>
+    <link rel="stylesheet" href="website-styles.css">
+    <script>
+        function topFunction() {
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+            }
+    </script>
 </head>
 <body>
-    <div class="header">
-        <div class="title"><h1>Steinmetz Bros</h1></div>
-    </div>
-        <nav>
-            <div class="Navigation">
-                <a href="skeleton_site_pg1.html">Home</a>
-                <a href="skeleton_site_pg2.html">About Us</a>
-                <a href="skeleton_site_pg3.html">Portfolio</a>
+    <header>
+        <div class="header">
+            <div class="title"><img src="../images/projectPics/sb-Header.png" alt="Steinmetz Bros Logo"></div>
+            <nav>
+                <div class="navs">
+                    <a href="skeleton_site_pg1.html">Home</a>
+                    <a href="skeleton_site_pg2.html">About Us</a>
+                    <a href="skeleton_site_pg3.html">Portfolio</a>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <section>
+        <div class="section1">
+            <div class="welcome">
+                <h2>Welcome!</h2>
             </div>
-        </nav>
-    <div class="section1">
-        <div class="welcome">
-            <h2>Welcome!</h2>
+            <div class="welcome2">
+                <p>We are Nick and John Steinmetz, drone specialists for hire. With five years of experience as FAA licensed drone pilots, we have photographed over 600 homes.</p>
+                <br>
+                <a href="skeleton_site_pg2.html" class="aboutuslink">Click here to learn more about us!</a>
+            </div>
         </div>
-        <div class="welcome2">
-            <p>We are Nick and John Steinmetz, drone specialists for hire. We are FAA licensed drone pilots, with five years of experience, photographing over 600 homes.  Click here to learn more about us!</p>
-        </div>
-    </div>
-    <div class="images1">
-        <div class="leftflex">
+        <div class="images1">
             <div>
-                <img src="../images/projectPics/STNMTZ_20170507_2661_.jpeg" alt="house_photo">
+                <div class="leftflex">
+                    <img src="../images/projectPics/STNMTZ_20170507_2661_.jpeg" alt="house_photo">
+                </div>
+            </div>
+            <div class="rightflex">
+                <div class="righttop">
+                    <img src="../images/projectPics/142+Ridgewood2.jpeg" alt="house_photo">
+                </div>
+                <div class="rightbot">
+                    <img src="../images/projectPics/DJI_0020-4.jpeg" alt="house_photo">
+                </div>
             </div>
         </div>
-        <div class="rightflex">
-            <div class="righttop">
-                <img src="../images/projectPics/142+Ridgewood2.jpeg" alt="house_photo">
+    </section>
+    <section>
+        <div class="section2">
+            <div class="covered">
+                <h2>We Got You Covered!</h2>
             </div>
-            <div class="rightbot">
-                <img src="../images/projectPics/DJI_0020-4.jpeg" alt="house_photo">
-            </div>
-        </div>
-    </div>
-    <div class="section2">
-        <div class="covered">
-            <h2>We Got You Covered!</h2>
-        </div>
-        <div class="covered2">
-            <p>Steinmetz Bros is a one stop shop for all your arial photography needs. From photo to video we have experience working with home owners, realtors, and architects. Click here to view our portfolio!</p>
-        </div>
-    </div>
-    <div class="images2">
-        <div class="leftflex2">
-            <div>
-                <img src="../images/projectPics/STNMTZ_20170430_024.jpeg" alt="house_photo">
+            <div class="covered2">
+                <p>Steinmetz Bros is a one stop shop for all your arial photography needs. From photo to video we have experience working with home owners, realtors, and architects.</p>
+                <br>
+                <a href="skeleton_site_pg3.html">Click here to view our Portfolio</a>
             </div>
         </div>
-        <div class="rightflex2">
-            <div class="righttop2">
-                <img src="../images/projectPics/DJI_0065.jpeg" alt="house_photo">
+        <div class="images2">
+            <div class="leftflex2">
+                <div>
+                    <img src="../images/projectPics/STNMTZ_20170430_024.jpeg" alt="house_photo">
+                </div>
             </div>
-            <div class="rightbot2">
-                <img src="../images/projectPics/339+Ridgewood.jpeg" alt="house_photo">
-            </div>
-        </div>
-    </div>
-    <div class="footertop">
-        <div class="logo">
-            <img src="../images/projectPics/SBlogo.png" class="sblogo" alt="house_photo">
-        </div>
-        <div class="info">
-            <div class="infol1">Steinmetz Brothers Drone Photography</div>
-            <div class="infol2">190 Linden Ave</div>
-            <div class="infol3">Glen Ridge, NJ</div>
-            <div class="infol4">07028</div>
-        </div>
-    </div>
-    <div class="footerbot">
-        <div class=gttbutton>
-            <div class="gototop">
-                <p>Go to top</p>
+            <div class="rightflex2">
+                <div class="righttop2">
+                    <img src="../images/projectPics/DJI_0065.jpeg" alt="house_photo">
+                </div>
+                <div class="rightbot2">
+                    <img src="../images/projectPics/339+Ridgewood.jpeg" alt="house_photo">
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    <footer>
+        <div class="footertop">
+            <div class="logo">
+                <img src="../images/projectPics/SBlogo.png" class="sblogo" alt="house_photo">
+            </div>
+            <div class="info">
+                <div class="infol1">Steinmetz Brothers Drone Photography</div>
+                <div class="infol2">190 Linden Ave</div>
+                <div class="infol3">Glen Ridge, NJ</div>
+                <div class="infol4">07028</div>
+            </div>
+        </div>
+        <div class="footerbot">
+            <div class=gttbutton>
+                <div class="gototop">
+                    <button onclick="topFunction()" id="myBtn" title="Go to top">Go to Top</button>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
