--- a/projectWork/skeleton_site_pg2.html
+++ b/projectWork/skeleton_site_pg2.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Steinmetz Bros About Us</title>
+    <link rel="stylesheet" href="website-styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="title"><h1>Steinmetz Bros</h1></div>
-    </div>
+    <header>
+        <div class="header">
+            <div class="title"><h1>Steinmetz Bros</h1></div>
+        </div>
+    </header>
         <nav>
             <div class="Navigation">
                 <a href="skeleton_site_pg1.html">Home</a>
