Images/website update

--- a/projectWork/skeleton_site_pg1.html
+++ b/projectWork/skeleton_site_pg1.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steinmetz Bros Home</title>
     <link rel="stylesheet" href="website-styles.css">
-    <script>
-        function topFunction() {
-            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-            }
-    </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <script src="website-javascript.js"></script>
 </head>
 <body>
     <header>
@@ -26,7 +25,7 @@
         </div>
     </header>
     <section>
-        <div class="section1">
+        <div class="welcome-section">
             <div class="welcome">
                 <h2>Welcome!</h2>
             </div>
@@ -39,21 +38,21 @@
         <div class="images1">
             <div>
                 <div class="leftflex">
-                    <img src="../images/projectPics/STNMTZ_20170507_2661_.jpeg" alt="house_photo">
+                    <img class="bigPic" src="../images/projectPics/STNMTZ_20170507_2661_.jpeg" alt="house_photo">
                 </div>
             </div>
             <div class="rightflex">
                 <div class="righttop">
-                    <img src="../images/projectPics/142+Ridgewood2.jpeg" alt="house_photo">
+                    <img class="smallTop" src="../images/projectPics/142+Ridgewood2.jpeg" alt="house_photo">
                 </div>
                 <div class="rightbot">
-                    <img src="../images/projectPics/DJI_0020-4.jpeg" alt="house_photo">
+                    <img class="smallBottom" src="../images/projectPics/DJI_0020-4.jpeg" alt="house_photo">
                 </div>
             </div>
         </div>
     </section>
     <section>
-        <div class="section2">
+        <div class="covered-section">
             <div class="covered">
                 <h2>We Got You Covered!</h2>
             </div>
@@ -66,15 +65,15 @@
         <div class="images2">
             <div class="leftflex2">
                 <div>
-                    <img src="../images/projectPics/STNMTZ_20170430_024.jpeg" alt="house_photo">
+                    <img class="bigPic2" src="../images/projectPics/STNMTZ_20170430_024.jpeg" alt="house_photo">
                 </div>
             </div>
             <div class="rightflex2">
                 <div class="righttop2">
-                    <img src="../images/projectPics/DJI_0065.jpeg" alt="house_photo">
+                    <img class="smallTop2" src="../images/projectPics/DJI_0065.jpeg" alt="house_photo">
                 </div>
                 <div class="rightbot2">
-                    <img src="../images/projectPics/339+Ridgewood.jpeg" alt="house_photo">
+                    <img class="smallBottom2" src="../images/projectPics/339+Ridgewood.jpeg" alt="house_photo">
                 </div>
             </div>
         </div>
