--- a/projectWork/skeleton_site_pg2.html
+++ b/projectWork/skeleton_site_pg2.html
@@ -6,53 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steinmetz Bros About Us</title>
     <link rel="stylesheet" href="website-styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="website-styles.css">
+    <script src="website-javascript.js"></script>
 </head>
-<body>
+<body class="page2">
     <header>
         <div class="header">
-            <div class="title"><h1>Steinmetz Bros</h1></div>
+            <div class="title"><img src="../images/projectPics/sb-Header.png" alt="Steinmetz Bros Logo"></div>
+            <nav>
+                <div class="navs">
+                    <a href="skeleton_site_pg1.html">Home</a>
+                    <a href="skeleton_site_pg2.html">About Us</a>
+                    <a href="skeleton_site_pg3.html">Portfolio</a>
+                </div>
+            </nav>
         </div>
     </header>
-        <nav>
-            <div class="Navigation">
-                <a href="skeleton_site_pg1.html">Home</a>
-                <a href="skeleton_site_pg2.html">About Us</a>
-                <a href="skeleton_site_pg3.html">Portfolio</a>
-            </div>
-        </nav>
-    <div class="section1">
+    <div class="aboutUsSections">
         <div class="aboutUs">
             <h2>About Us</h2>
         </div>
     </div>
     <div class="nickBox">
-        <div>
+        <div class="nickImage">
             <img src="../images/projectPics/DSC_0768.png" alt="Nick's Portrait">
         </div>
-        <div>
-            <h3>Nick</h3>
-            <p>I'm Nick Steinmetz, the drone pilot and photographer. I'm responsible for taking pictures, toning and printing them. I have five years experience photographing houses with a DJI Phantom 4 Pro drone. I have been flying drones for six years now from small hand-held drones to professional drones like the DJI Inspire 2. I am currently attending the University of Syracuse in the class of 2024 and am majoring in Information Management and Technology.</p>
+        <div class="nickInfo">
+            <h3 class="nick">Nick</h3>
+            <p class="nickDisc">I'm Nick Steinmetz, the drone pilot and photographer. I'm responsible for taking pictures, toning and printing them. I have five years experience photographing houses with a DJI Phantom 4 Pro drone. I have been flying drones for six years now from small hand-held drones to professional drones like the DJI Inspire 2. I am currently attending the University of Syracuse in the class of 2024 and am majoring in Information Management and Technology.</p>
         </div>
     </div>
     <div class="johnBox">
-        <div>
+        <div class="johnImage">
             <img src="../images/projectPics/Screenshot-2022-03-28-at-6.49.54-PM-copy.png" alt="John's Portrait">
         </div>
-        <div>
-            <h3>John</h3>
-            <p>Hi, I'm John Steinmetz, responsible for communications and sales. I have rung on over 500 doorbells over the past three years and have experience working with customers while working on the Glen Ridge Photo History Project. I currently attend Williams College in the class of 2024, and planning on double majoring in Economics and Chinese. </p>
+        <div class="johnInfo">
+            <h3 class="john">John</h3>
+            <p class="johnDisc">Hi, I'm John Steinmetz, responsible for communications and sales. I have rung on over 500 doorbells over the past three years and have experience working with customers while working on the Glen Ridge Photo History Project. I currently attend Williams College in the class of 2024, and planning on double majoring in Economics and Chinese. </p>
         </div>
     </div>
-    <div class="section2">
+    <div class="ourStorySection">
         <div class="ourStory">
             <h2>Our Story</h2>
         </div>
     </div>
     <div class="story">
-        <p>Our involvement in aerial photography began when we went on helicopter flights with our father, George Steinmetz, who is an aerial photographer working for National Geographic. Three years ago, we started photographing homes around our neighborhood in Glen Ridge, New Jersey, for a project with the Glen Ridge Historical Society to document all of the town's homes. For the past three summers, we have photographed a total of 400 houses, and gained a lot of experience in aerial real estate photography.
+        <div class=story-o>
+            <div class="oLetter">O</div>ur involvement in aerial photography began when we went on helicopter flights with our father, George Steinmetz, who is an aerial photographer working for National Geographic. Three years ago, we started photographing homes around our neighborhood in Glen Ridge, New Jersey, for a project with the Glen Ridge Historical Society to document all of the town's homes. For the past three summers, we have photographed a total of 400 houses, and gained a lot of experience in aerial real estate photography.
 
-            We both have earned our unmanned aircraft license from the FAA. This has opened our business up to commercial opportunities including photography for private use and in the real estate industry. Although our specialty is still photos, Nick has a lot of experience with drone videography, mainly from being an assistant on his trips with his father.
-        </p>
+                We both have earned our unmanned aircraft license from the FAA. This has opened our business up to commercial opportunities including photography for private use and in the real estate industry. Although our specialty is still photos, Nick has a lot of experience with drone videography, mainly from being an assistant on his trips with his father.
+        </div>
     </div>
     <div class="footer">
         <div class="footertop">
@@ -69,7 +75,7 @@
         <div class="footerbot">
             <div class=gttbutton>
                 <div class="gototop">
-                    <p>Go to top</p>
+                    <button onclick="topFunction()" id="myBtn" title="Go to top">Go to Top</button>
                 </div>
             </div>
         </div>
