--- a/projectWork/skeleton_site_pg1.html
+++ b/projectWork/skeleton_site_pg1.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/projectPics/favicon.ico">
     <script src="website-javascript.js"></script>
 </head>
 <body>
