--- a/projectWork/skeleton_site_pg2.html
+++ b/projectWork/skeleton_site_pg2.html
@@ -16,7 +16,7 @@
 <body class="page2">
     <header>
         <div class="header">
-            <div class="title"><img src="../images/projectPics/sb-Header.png" alt="Steinmetz Bros Logo"></div>
+            <div class="title"><img class="logoHeader" src="../images/projectPics/sb-Header.png" alt="Steinmetz Bros Logo"></div>
             <nav>
                 <div class="navs">
                     <a href="skeleton_site_pg1.html">Home</a>
@@ -76,7 +76,7 @@
         <div class="footerbot">
             <div class=gttbutton>
                 <div class="gototop">
-                    <button onclick="topFunction()" id="myBtn" title="Go to top">Go to Top</button>
+                    <button onclick="topFunction()" class="gttbutton" title="Go to top">Go to Top</button>
                 </div>
             </div>
         </div>
