about us update

--- a/projectWork/skeleton_site_pg2.html
+++ b/projectWork/skeleton_site_pg2.html
@@ -28,7 +28,8 @@
     </header>
     <div class="aboutUsSections">
         <div class="aboutUs">
-            <h2>About Us</h2>
+            <img src="../images/projectPics/ourHouseBanner.jpg" alt="arieal view of a house">
+            <h2 class="centered">About Us</h2>
         </div>
     </div>
     <div class="nickBox">
