--- a/projectWork/skeleton_site_pg3.html
+++ b/projectWork/skeleton_site_pg3.html
@@ -97,14 +97,23 @@
         
         </div>
         <br>
+        <div id="dots">
+            <span class="dot" onclick="currentSlide(1)"></span> 
+            <span class="dot" onclick="currentSlide(2)"></span> 
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
+        </div>
         <div class="thumbnails">
-          <img src="../images/projectPics/DJI_0130.jpeg" alt="house" class="dot" onclick="currentSlide(1)">
-          <img src="../images/projectPics/STNMTZ_20160714_02629.jpeg" alt="house" class="dot" onclick="currentSlide(2)">
-          <img src="../images/projectPics/STNMTZ_20160714_02620+copy.jpeg" alt="house" class="dot" onclick="currentSlide(3)">
-          <img src="../images/projectPics/209+Ridgewood+back.jpeg" alt="house" class="dot" onclick="currentSlide(4)">
-          <img src="../images/projectPics/STNMTZ_20170430_003.jpeg" alt="house" class="dot" onclick="currentSlide(5)">
-          <img src="../images/projectPics/Screen+Shot+2022-03-10+at+11.53.57+AM.png" alt="house" class="dot" onclick="currentSlide(6)">
-          <img src="../images/projectPics/428+Ridgewood.jpeg" alt="house" class="dot" onclick="currentSlide(7)">
+          <img src="../images/projectPics/DJI_0130.jpeg" alt="house" class="thumbnail" onclick="currentSlide(1)">
+          <img src="../images/projectPics/STNMTZ_20160714_02629.jpeg" alt="house" class="thumbnail" onclick="currentSlide(2)">
+          <img src="../images/projectPics/STNMTZ_20160714_02620+copy.jpeg" alt="house" class="thumbnail" onclick="currentSlide(3)">
+          <img src="../images/projectPics/209+Ridgewood+back.jpeg" alt="house" class="thumbnail" onclick="currentSlide(4)">
+          <img src="../images/projectPics/STNMTZ_20170430_003.jpeg" alt="house" class="thumbnail" onclick="currentSlide(5)">
+          <img src="../images/projectPics/Screen+Shot+2022-03-10+at+11.53.57+AM.png" alt="house" class="thumbnail" onclick="currentSlide(6)">
+          <img src="../images/projectPics/428+Ridgewood.jpeg" alt="house" class="thumbnail" onclick="currentSlide(7)">
         </div>
     <div class="footer">
         <div class="footertop">
