--- a/projectWork/skeleton_site_pg2.html
+++ b/projectWork/skeleton_site_pg2.html
@@ -22,6 +22,7 @@
                     <a href="skeleton_site_pg1.html">Home</a>
                     <a href="skeleton_site_pg2.html">About Us</a>
                     <a href="skeleton_site_pg3.html">Portfolio</a>
+                    <a href="contact_page.html">Contact</a>
                 </div>
             </nav>
         </div>
