--- a/projectWork/contact_page.html
+++ b/projectWork/contact_page.html
@@ -28,6 +28,9 @@
     </header>
     <section>
         <div class="contactFlex">
+            <div class="smallImage">
+                <img src="../images/projectPics/209-Ridgewood.jpeg" class="contactIMG" alt="family portrait in front of their house">
+            </div>
             <div class="formFlex">
                 <br><h1>Contact Us:</h1><br><br>
                 <form action="https://formspree.io/f/mbjwaobz" method="post">
@@ -73,7 +76,7 @@
                 <h2>Contact Info:</h2>
                 <div>Phone:201-306-2321</div><br>
                 <div>Email: GRPhotoHP@gmail.com</div><br>
-                <div>
+                <div class="bigImage">
                     <img src="../images/projectPics/209-Ridgewood.jpeg" class="contactIMG" alt="family portrait in front of their house">
                 </div>
             </div>
