--- a/projectWork/skeleton_site_pg2.html
+++ b/projectWork/skeleton_site_pg2.html
@@ -29,7 +29,7 @@
     </header>
     <div class="aboutUsSections">
         <div class="aboutUs">
-            <img src="../images/projectPics/ourHouseBanner.jpg" alt="arieal view of a house">
+            <img src="../images/projectPics/ourHouseBanner.jpg" class="aboutUsImage" alt="arieal view of a house">
             <h2 class="centered">About Us</h2>
         </div>
     </div>
