john image update

--- a/projectWork/skeleton_site_pg2.html
+++ b/projectWork/skeleton_site_pg2.html
@@ -44,7 +44,7 @@
     </div>
     <div class="johnBox">
         <div class="johnImage">
-            <img src="../images/projectPics/Screenshot-2022-03-28-at-6.49.54-PM-copy.png" alt="John's Portrait">
+            <img src="../images/projectPics/STNMTZ_20221213_365.png" alt="John's Portrait">
         </div>
         <div class="johnInfo">
             <h3 class="john">John</h3>
