--- a/projectWork/contact_page.html
+++ b/projectWork/contact_page.html
@@ -36,7 +36,7 @@
                 <form action="https://formspree.io/f/mbjwaobz" method="post">
                     <div>
                         <div>
-                            <label for="name">Name:</label>
+                            <label for="name1">Name:</label>
                         </div>
                         <div class="nameBtn">
                             <input type="text" id="name1" name="name" class="name" placeholder="First Name" required>
