--- a/projectWork/skeleton_site_pg1.html
+++ b/projectWork/skeleton_site_pg1.html
@@ -59,7 +59,7 @@
                 <h2>We Got You Covered!</h2>
             </div>
             <div class="covered2">
-                <p>Steinmetz Bros is a one stop shop for all your arial photography needs. From photo to video we have experience working with home owners, realtors, and architects.</p>
+                <p>Steinmetz Bros is a one stop shop for all your aerial photography needs. From photo to video we have experience working with home owners, realtors, and architects.</p>
                 <br>
                 <a href="skeleton_site_pg3.html">Click here to view our Portfolio</a>
             </div>
