--- a/projectWork/skeleton_site_pg2.html
+++ b/projectWork/skeleton_site_pg2.html
@@ -48,7 +48,7 @@
         </div>
         <div class="johnInfo">
             <h3 class="john">John</h3>
-            <p class="johnDisc">Hi, I'm John Steinmetz, responsible for communications and sales. I have rung on over 500 doorbells over the past three years and have experience working with customers while working on the Glen Ridge Photo History Project. I currently attend Williams College in the class of 2024, and planning on double majoring in Economics and Chinese. </p>
+            <p class="johnDisc">Hi, I'm John Steinmetz, responsible for communications and sales. I have rung over 500 doorbells over the past three 5 years and have experience working with homeowners while working on the Glen Ridge Photo History Project. I also have experience working with local realtors organizing and facilitating drone shoots. Currently, I'm attend Williams College in the class of 2024, and am planning on double majoring in Economics and Chinese.</p>
         </div>
     </div>
     <div class="ourStorySection">
