--- a/lab07/contact.html
+++ b/lab07/contact.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <a href="index.html">Bio</a>
+        <a href="skills.html">Skills</a>
+        <a href="contact.html">Contact</a>
+    </nav>
     <h1>Contact</h1>
     <p>Nick Steinmetz</p>
     <p>727 S Crouse Ave</p>
